# parser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  codeql.yml
libs/: CMakeLists.txt
libs/idl/: CMakeLists.txt
libs/idl/include/parser/idl/: token_location.hpp  token_lookahead.hpp  token_reader.hpp  tokens.hpp
libs/idl/src/: token_location.cpp  token_lookahead.cpp  token_reader.cpp
libs/idl/tests/: token_reader_test.cpp
