cmake_minimum_required(VERSION 3.20)
cmake_policy(SET CMP0097 NEW)
project(parser_idl)

add_library(${PROJECT_NAME}
        src/token_location.cpp
        src/token_lookahead.cpp
        src/token_reader.cpp
)

target_include_directories(${PROJECT_NAME}
        PUBLIC
        include
)

target_link_libraries(${PROJECT_NAME}
        PRIVATE
        lexer
)

if (PARSER_BUILD_TESTS)
    add_executable(${PROJECT_NAME}_tests
            tests/token_reader_test.cpp
    )

    target_link_libraries(${PROJECT_NAME}_tests
            PRIVATE
            ${PROJECT_NAME}
            lexer
            gtest_main
    )

    add_test(NAME ${PROJECT_NAME}_tests COMMAND ${PROJECT_NAME}_tests)

    target_compile_definitions(${PROJECT_NAME}_tests PRIVATE SOURCE_DIR="${CMAKE_SOURCE_DIR}")
endif ()
